--- a/conference_poster_4.tex
+++ b/conference_poster_4.tex
@@ -77,25 +77,6 @@ linewidth=2pt % Width of the border lines around content boxes
 {\includegraphics[height=6em]{USC.png}} % Second university/lab logo on the right
 
 %----------------------------------------------------------------------------------------
-%	OBJECTIVES
-%----------------------------------------------------------------------------------------
-
-%\headerbox{Objectives}{name=objectives,column=0,row=0}{
-%
-%Donec non nisl a \textbf{arcu consequat} varius. Sed suscipit cursus luctus. Nulla sit amet elit augue. Curabitur scelerisque mollis dolor, quis blandit lorem condimentum at. Pellentesque sed nibh vel \textbf{dolor} sagittis semper. 
-%
-%\begin{enumerate}\compresslist
-%\item Feugiat vitae elit
-%\item bibendum ante sed lacinia eros in
-%\item Curabitur scelerisque arcu consequat varius
-%\item Dapibus nulla id purus consectetur
-%\item Fringilla integer 
-%\end{enumerate}
-%
-%\vspace{0.3em} % When there are two boxes, some whitespace may need to be added if the one on the right has more content
-%}
-
-%----------------------------------------------------------------------------------------
 %	INTRODUCTION
 %----------------------------------------------------------------------------------------
 
@@ -104,32 +85,41 @@ linewidth=2pt % Width of the border lines around content boxes
 \begin{multicols}{2}
 \vspace{1em}
 
+Current decentralized cryptocurrencies based on \textbf{blockchains suffer from a
+scalability problem} that makes them unfit to replace centralized payment
+systems such as VISA and PayPal.
 
-Current decentralized cryptocurrencies based on Blockchains suffer from a
-scalability problem that makes them unfit to replace regular fiat transactions.
-We propose an idea to achieve a much higher scalability by creating transaction
-zones at different levels, in which the transactions have different properties
-depending on the smallest common zone-level.  A possibility would be for levels
-to be: global (0), country (-1), state (-2), city (-3).  A global blockchain would
-be synchronized daily (merging the blockchain of every country into one), which
-every country would take as starting point to build a fork in which only
-in-country transactions would be accepted.  Similarly, each country would
-synchronize every 2 hours the forks of each state, and so on.  Ultimately,
-in-city transactions would happen with minimal delay and only be synchronized at
-state level every 30 minutes.  This would allow in-city transactions to happen
-with minimal delay, in-state with 30m delay, in-country with 2h delay
-and globally with 24h delay.  This design would allow the transaction throughput
-within a single city to achieve the same throughput as current Blockchains
-do globally.  In other words, we are optimizing transaction delays by distance,
-which is a common expectation of fiat transactions, while allowing the global
-transaction throughput to increase massively.
+\vspace{1em}
+We propose an idea to achieve a higher scalability than current
+cryptocurrencies by creating a \textbf{hierarchy of transaction zones at different
+levels}, in which the transactions have different properties depending on the
+smallest level shared zone.
+
+\textbf{Each level would have a fork of a common blockchain that would be merged with
+sibling zones (those under the same parent) periodically}, with the periodicity
+being different at each level.  The periodicity would be lower on higher level
+zones.
+
+Transactions within the lowest level zones would be applied and verified
+inmediately whereas those traversing zones would only be applied once the forks of
+the corresponding zones are merged.
+
+We suggest using 4 levels: global (0), country (-1), state (-2), city (-3).
+
+\vspace{1em}
+This design would allow the transaction throughput within a single city to
+achieve a similar throughput as current blockchains do globally.
+
+In other words, we are \textbf{optimizing transaction delays by distance}, which is a
+common expectation of fiat transactions, while allowing the global transaction
+throughput to increase significantly.
 
 \end{multicols}
 
 }
 
 %----------------------------------------------------------------------------------------
-%	RESULTS 2
+%	BACKGROUND
 %----------------------------------------------------------------------------------------
 
 %\headerbox{Background}{name=results2,column=1,below=objectives,bottomaligned=conclusion}{ % This block's bottom aligns with the bottom of the conclusion block
@@ -138,19 +128,6 @@ transaction throughput to increase massively.
 Donec faucibus purus at tortor egestas eu fermentum dolor facilisis. Maecenas tempor dui eu neque fringilla rutrum. Mauris \emph{lobortis} nisl accumsan.
 
 Bitcoin, Ethereum, other cryptocurrencies not scalable.  Scalable approaches are bla bla bla, and have reached this throughput bla bla.  Widely used payment systems like Visa and Paypal have higher throughput bla bla.
-
-%\begin{center}
-%\begin{tabular}{l l l}
-%\toprule
-%\textbf{Treatments} & \textbf{Response 1} & \textbf{Response 2}\\
-%\midrule
-%Treatment 1 & 0.0003262 & 0.562 \\
-%Treatment 2 & 0.0015681 & 0.910 \\
-%Treatment 3 & 0.0009271 & 0.296 \\
-%\bottomrule
-%\end{tabular}
-%\captionof{table}{Table caption}
-%\end{center}
 
 Nulla ut porttitor enim. Suspendisse venenatis dui eget eros gravida tempor. Mauris feugiat elit et augue placerat ultrices. Morbi accumsan enim nec tortor consectetur non commodo.
 
@@ -170,7 +147,7 @@ Paypal &  193 \\
 }
 
 %----------------------------------------------------------------------------------------
-%	RESULTS 1
+%	MAIN
 %----------------------------------------------------------------------------------------
 
 \headerbox{Scaling with leveled zones}{name=main,column=0,span=2,row=1,below=introduction,above=bottom}{
@@ -221,13 +198,6 @@ If a user commutes between zones, they can have an account for each zone and spl
 
 No need to verify the actual location of the user VS the claimed location.  The claimed location only serves to decide in which local fork the account can do transactions.
 
-%\end{multicols}
-
-%------------------------------------------------
-
-%\begin{multicols}{2}
-%\vspace{1em}
-
 \begin{center}
 \includegraphics[width=0.8\linewidth]{placeholder}
 \captionof{figure}{Figure caption}
@@ -236,22 +206,35 @@ No need to verify the actual location of the user VS the claimed location.  The 
 \end{multicols}
 }
 
+%----------------------------------------------------------------------------------------
+%	CHALLENGES
+%----------------------------------------------------------------------------------------
+
 \headerbox{Challenges}{name=challenges,column=2,span=1,below=background}{
 
-%\begin{multicols}{2}
-%\vspace{1em}
-
-\begin{itemize}
-    \item Nodes may be required to be very powerful to track the global blockchain.  How could smaller (less bandwidth/storage/computation) nodes contribute to the network?
-    \item Performing a merge requires verifying all the forks against double spending.  This could require a lot of computation resources.  Could the merge output a compressed form that makes it easier to verify in merges of the next level?
-    \item At the lowest level, each zone has a small number of nodes, which could make it easier for an attacker to disrupt such zone.
-    \item What mitigations could be added so that an attacker doesn't disrupt a small level zone (making a denial of service).
-    \item Idea: somehow, make sure that all zones have the same computing power?
-    \item Merging time between forks should be faster than the interval time between merges.
+\begin{itemize}[leftmargin=1em]
+    \item \textbf{The merging process requires more computational work and bandwidth on
+        higher levels}.  Not all nodes may be capable enough to verify merges at
+        every level,  Flexibility in the amount of contribution by node may be
+        required.
+    \item \textbf{When a node performs a merge, it needs to verify the forks of the
+        sibling zones for correctness}.  This could require a lot of computation
+        resources.  A possible optimization would be that each merge outputs a
+        compressed form of the result that makes verification at the next level
+        faster.
+    \item \textbf{At the lowest level, each zone would have a small number of nodes}.
+        This opens the possibility of an attacker disrupting the zone by
+        registering nodes in it with high validation weight (either
+        computational power or stake).  Such disruption could be a denial of
+        service or a denial of selected transactions.
+    \begin{itemize}[leftmargin=1em]
+        \item A way to make make sure that all zones have the same computing
+            power could be useful to solve this.
+    \end{itemize}
+    \item \textbf{At each level, the merging time between forks should be faster than the
+        periodicity of merges}.
 \end{itemize}
 
-
-%\end{multicols}
 }
 
 %----------------------------------------------------------------------------------------
@@ -266,102 +249,6 @@ No need to verify the actual location of the user VS the claimed location.  The 
 \bibliographystyle{unsrt}
 \bibliography{sample} % Use sample.bib as the bibliography file
 }}
-
-%----------------------------------------------------------------------------------------
-%	FUTURE RESEARCH
-%----------------------------------------------------------------------------------------
-
-%\headerbox{Future Research}{name=futureresearch,column=1,span=2,aligned=references,above=bottom}{ % This block is as tall as the references block
-%
-%\begin{multicols}{2}
-%Integer sed lectus vel mauris euismod suscipit. Praesent a est a est ultricies pellentesque. Donec tincidunt, nunc in feugiat varius, lectus lectus auctor lorem, egestas molestie risus erat ut nibh.
-%
-%Maecenas viverra ligula a risus blandit vel tincidunt est adipiscing. Suspendisse mollis iaculis sem, in \emph{imperdiet} orci porta vitae. Quisque id dui sed ante sollicitudin sagittis.
-%\end{multicols}
-%}
-
-%----------------------------------------------------------------------------------------
-%	CONTACT INFORMATION
-%----------------------------------------------------------------------------------------
-
-%\headerbox{Contact Information}{name=contact,column=2,aligned=references,above=bottom}{ % This block is as tall as the references block
-%
-%\begin{description}\compresslist
-%\item[Web] www.university.edu/smithlab
-%\item[Email] john@smith.com
-%\item[Phone] +1 (000) 111 1111
-%\end{description}
-%}
-
-%----------------------------------------------------------------------------------------
-%	CONCLUSION
-%----------------------------------------------------------------------------------------
-
-%\headerbox{Conclusion}{name=conclusion,column=2,span=2,row=0,below=results,above=references}{
-%
-%\begin{multicols}{2}
-%
-%\tikzstyle{decision} = [diamond, draw, fill=blue!20, text width=4.5em, text badly centered, node distance=2cm, inner sep=0pt]
-%\tikzstyle{block} = [rectangle, draw, fill=blue!20, text width=5em, text centered, rounded corners, minimum height=4em]
-%\tikzstyle{line} = [draw, -latex']
-%\tikzstyle{cloud} = [draw, ellipse, fill=red!20, node distance=3cm, minimum height=2em]
-%
-%\begin{tikzpicture}[node distance = 2cm, auto]
-%\node [block] (init) {Initialize Model};
-%\node [cloud, left of=init] (Start) {Start};
-%\node [cloud, right of=init] (Start2) {Start Two};
-%\node [block, below of=init] (init2) {Initialize Two};
-%\node [decision, below of=init2] (End) {End};
-%\path [line] (init) -- (init2);
-%\path [line] (init2) -- (End);
-%\path [line, dashed] (Start) -- (init);
-%\path [line, dashed] (Start2) -- (init);
-%\path [line, dashed] (Start2) |- (init2);
-%\end{tikzpicture}
-%
-%%------------------------------------------------
-%
-%\begin{itemize}\compresslist
-%\item Pellentesque eget orci eros. Fusce ultricies, tellus et pellentesque fringilla, ante massa luctus libero, quis tristique purus urna nec nibh. Phasellus fermentum rutrum elementum. Nam quis justo lectus.
-%\item Vestibulum sem ante, hendrerit a gravida ac, blandit quis magna.
-%\item Donec sem metus, facilisis at condimentum eget, vehicula ut massa. Morbi consequat, diam sed convallis tincidunt, arcu nunc.
-%\item Nunc at convallis urna. isus ante. Pellentesque condimentum dui. Etiam sagittis purus non tellus tempor volutpat. Donec et dui non massa tristique adipiscing.
-%\end{itemize}
-%
-%\end{multicols}
-%}
-
-%----------------------------------------------------------------------------------------
-%	MATERIALS AND METHODS
-%----------------------------------------------------------------------------------------
-
-%\headerbox{Materials \& Methods}{name=method,column=0,below=objectives,bottomaligned=conclusion}{ % This block's bottom aligns with the bottom of the conclusion block
-%
-%The following materials were required to complete the research:
-%
-%\begin{itemize}\compresslist
-%\item Curabitur pellentesque dignissim
-%\item Eu facilisis est tempus quis
-%\item Duis porta consequat lorem
-%\item Eu facilisis est tempus quis
-%\end{itemize}
-%
-%The following equations were used for statistical analysis:
-%
-%\begin{equation}
-%\cos^3 \theta =\frac{1}{4}\cos\theta+\frac{3}{4}\cos 3\theta
-%\label{eq:refname}
-%\end{equation}\
-%
-%\begin{equation}
-%E = mc^{2}
-%\label{eqn:Einstein}
-%\end{equation}
-%
-%Phasellus imperdiet, tortor vitae congue bibendum, felis enim sagittis lorem, et volutpat ante orci sagittis mi. Morbi rutrum laoreet semper. Morbi accumsan enim nec tortor consectetur non commodo nisi sollicitudin. Proin sollicitudin. Pellentesque eget orci eros. Fusce ultricies, tellus et pellentesque fringilla, ante massa luctus libero, quis tristique purus urna nec nibh.
-%}
-%
-%----------------------------------------------------------------------------------------
 
 \end{poster}
 
