--- a/conference_poster_4.tex
+++ b/conference_poster_4.tex
@@ -294,6 +294,8 @@ zones (or as they are collected into blocks in the city (-3) level).
     \begin{itemize}[leftmargin=1em]
         \item A way to make make sure that all zones have the same computing
             power could be useful to solve this.
+        \item A different approach would consist on restricting how easily new
+            nodes with high computational power can join or switch zones.
     \end{itemize}
     \item \textbf{At each level, the merging time between forks should be faster than the
         periodicity of merges}.
